...
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/pushUpKeeper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pushupInit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="100sp" />
...
            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/timeKeeper"
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/alarm_clock"
                android:drawablePadding="@dimen/guage_margin"
                android:padding="10dp"
...
