...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/five_margin"
                    android:layout_weight="1">

                    <me.itangqi.waveloadingview.WaveLoadingView
                        android:id="@+id/totalPushUps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:wlv_borderColor="@color/colorAccent"
                        app:wlv_borderWidth="2dp"
                        app:wlv_progressValue="70"
...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/five_margin"
                    android:layout_weight="1">

                    <me.itangqi.waveloadingview.WaveLoadingView
                        android:id="@+id/todaysPushUps"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:wlv_borderColor="@color/blue"
                        app:wlv_borderWidth="2dp"
                        app:wlv_progressValue="43"
...
