...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_workout" />

    <RelativeLayout
        android:id="@+id/touchScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
...
